Changelog
=========

5.2-dev - (unreleased)
----------------------
* Bug fix: fixed google_earth page template from breaking on soer pages 
  [ichimdav #5386]
* Bug fix: return a number instead of a boolean for the max number in syndication
  in order for search RSS to display more than 1 result
  [ichimdav #5354]

5.1 - (2012-07-13)
------------------
* Feature: re-enabled eea.relations widget for Base Content
  [ichimdav #4705]
* Bug fix: display validation error when translating if error is present
  [ichimdav #5302]
* Bug Fix: Fixed missing i18n attributes, i18n:domain and duplicate keys
  in .pt 
  [prospchr refs #5162]

5.0 - (2012-06-20)
------------------
* Bug fix: fixed rdf dcterms:isReplacedBy (it was set to wrongly to replacedBy)
  [demarant fixes #5129]
* Bug fix: check if results are found for topics on isGeoContainer
  [ichimdav #3355]
* Bug fix: add a validator for max file size in ExternalHighlight and Promotion
  [tiberich refs #5259]
* Bug fix: removed usage of isEmpty
  [tiberich refs #5289]

4.21 - (2012-06-13)
-------------------
* Change: Images on highlights and articles are now wider and span entire
  content area. this change also fixes some floating layout issues.
  [demarant fixes #5023 refs #4206]
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Bug fix: set effective date to now() when a content item is first published
  [tiberich #5125]
* Feature: use a subscriber to add dcterms:isReplacedBy and dcterms:replaces
  to IVersionEnhanced content
  [tiberich, demarant #5129]
* Upgrade step: in www/portal_properties/site_properties:
  - add quick_event_anonymous_creator property of type string with the name of the user
  that should be the creator of the anonymous quick events
  [ichimdav #4788]
* Upgrade step: with a serviceWWW instance from the root of the site run:
  www/SITE/@@migrate2geotags -- to migrate Events and QuickEvents to geotags